--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
     <link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     
@@ -13,7 +13,7 @@
         <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="Platzi Logo">
         <div class="header__menu">
             <div class="header__menu--profile">
-                <img src="./usuario.png" alt="User">
+                <img src="./static/img/usuario.png" alt="User">
                 <p>Perfil</p>
             </div>
             <ul>
