--- a/login/iniciar_sesion.html
+++ b/login/iniciar_sesion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iniciar sesión</title>
     <link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -15,14 +15,14 @@
         <section class="login__container">
             <h2>Inicia sesión</h2>
             <form class="login__container--form">
-                <input class="input" type="text" placeholder="correo">
-                <input class="input" type="text" placeholder="contrasegna">
+                <input class="input" type="text" placeholder="Correo">
+                <input class="input" type="text" placeholder="Contraseña">
                 <button class="button">Iniciar sesión</button>
                 <div class="login__container--remember-me">
                     <label for="cbox1">
                         <input type="checkbox" id="cbox1" value="Checkbox"> Recuerdame
                     </label>
-                    <a href="/">Olvidé mi contrasegna</a>
+                    <a href="/">Olvidé mi contraseña</a>
                 </div>
             </form>
             <section class="login__container--social-media">
