--- a/noFound/noFound.html
+++ b/noFound/noFound.html
@@ -14,7 +14,7 @@
         <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="Platzi Logo">
         <div class="header__menu">
             <div class="header__menu--profile">
-                <img src="./usuario.png" alt="User">
+                <img src="../static/img/usuario.png" alt="User">
                 <p>Perfil</p>
             </div>
             <ul>
