Top 10 series added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="background">
         <h2 class="categories__title">Favoritos</h2>
-
+        <!--Favoritos-->
     <section class="carrousel">
         <div class="carrousel__container">
             <div class="carrousel-item">
@@ -123,7 +123,104 @@
                 </div>
             </div>
         </div>
+        
     </section>
+
+    <h2 class="categories__title">Top 10 series</h2>
+    <!--Top 10 Series-->
+<section class="carrousel">
+    <div class="carrousel__container">
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BODZlYjQ4NzYtZTg1MC00NGY4LTg4NjQtNGE3ZjRkMjk3YjMyXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg" alt="Stranger things">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">Stranger things</p>
+                <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+            </div>
+        </div>
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BNzU0MTFiNjUtNzIxMi00ZGZiLTgwZmUtMjIxOWNmMDE0NTE1XkEyXkFqcGdeQXVyNjg0NTcxMTg@._V1_FMjpg_UX1000_.jpg" alt="Derry Girls">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">Derry Girls</p>
+                <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+            </div>
+        </div>
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BZmQ3OTZkNDUtNTU0Mi00ZjE4LTgyNTUtY2E4NWRmNDUxMzkyXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg" alt="Ms Marvel">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">Ms. Marvel</p>
+                <p class="carrousel-item__details--subtitle">2022 TP 40m</p>
+            </div>
+        </div>
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/obi-wan-kenobi-serie-disney-poster-1651689693.jpg" alt="Obi-Wan Kenobi">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">Obi-Wan Kenobi</p>
+                <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+            </div>
+        </div>
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BNzYxYWY3YzctZjRiNS00MTViLTk5OTYtZDEyNzAwNGE5ODY0XkEyXkFqcGdeQXVyODUxOTU0OTg@._V1_FMjpg_UX1000_.jpg" alt="This is us">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">This is us</p>
+                <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+            </div>
+        </div>
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BYTc5OWNhYjktMThlOS00ODUxLTgwNDQtZjdjYjkyM2IwZTZlXkEyXkFqcGdeQXVyNTA3MTU2MjE@._V1_.jpg" alt="Moon Knight">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">Moon Knight</p>
+                <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+            </div>
+        </div>
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://static.wikia.nocookie.net/amazons-the-boys/images/c/c5/The_Boys_season_3_poster.png/revision/latest?cb=20220310170954" alt="People">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">The boys</p>
+                <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+            </div>
+        </div>
+        <div class="carrousel-item">
+            <img class="carrousel-item__img" src="https://pics.filmaffinity.com/Lord_of_the_Rings_The_Rings_of_Power_TV_Series-303928473-large.jpg" alt="The Lord of the Rings">
+            <div class="carrousel-item__details">
+                <div class="carrousel-item-imgContainer">
+                    <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                    <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                </div>
+                <p class="carrousel-item__details--title">The Lord of the Rings</p>
+                <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+            </div>
+        </div>
+    </div>
+    
+</section>
 
     <h2 class="categories__title">Terror</h2>
 
