Top 10 movies added

--- a/index.html
+++ b/index.html
@@ -125,6 +125,101 @@
         </div>
     </section>
 
+    <h2 class="categories__title">Top 10 Peliculas</h2>
+
+    <section class="carrousel">
+        <div class="carrousel__container">
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BNWM0ZGJlMzMtZmYwMi00NzI3LTgzMzMtNjMzNjliNDRmZmFlXkEyXkFqcGdeQXVyMTM1MTE1NDMx._V1_.jpg" alt="Doctor Strange in the Multiverse of Madness">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">Doctor Strange in the Multiverse of Madness</p>
+                    <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://pics.filmaffinity.com/The_Batman-449856406-large.jpg" alt="The Batman">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">The Batman</p>
+                    <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://news.cgtn.com/news/2022-01-13/-The-Battle-at-Lake-Changjin-II-set-for-Chinese-New-Year-s-Day--16N2XyvcsiA/img/c47ada44a4ad4df2b4fc5b7716f647be/c47ada44a4ad4df2b4fc5b7716f647be.jpeg" alt="The Battle at Lake Changjin II">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">The Battle at Lake Changjin II</p>
+                    <p class="carrousel-item__details--subtitle">2022 TP 40m</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BMmIwZDMyYWUtNTU0ZS00ODJhLTg2ZmEtMTk5ZmYzODcxODYxXkEyXkFqcGdeQXVyMTEyMjM2NDc2._V1_.jpg" alt="Top Gun Maverick">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">Top Gun Maverick</p>
+                    <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://pics.filmaffinity.com/Uncharted-668430180-large.jpg" alt="Uncharted">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">Uncharted</p>
+                    <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://m.media-amazon.com/images/M/MV5BZGQ1NjQyNDMtNzFlZS00ZGIzLTliMWUtNGJkMGMzNTBjNDg0XkEyXkFqcGdeQXVyMTE1NDI5MDQx._V1_.jpg" alt="Fantastic Beasts: The Secrets of Dumbledore">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">Fantastic Beasts: The Secrets of Dumbledore</p>
+                    <p class="carrousel-item__details--subtitle">2019 16+ 122m</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://albumizr.com/ia/95320c4b745fad892daf6660c696942f.jpg" alt="Sonic the Hedgehog 2">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">Sonic the Hedgehog 2 </p>
+                    <p class="carrousel-item__details--subtitle">2022 16+ 122m</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img class="carrousel-item__img" src="https://img.ecartelera.com/noticias/fotos/68600/68697/1.jpg" alt="Jurassic World: Dominion">
+                <div class="carrousel-item__details">
+                    <div class="carrousel-item-imgContainer">
+                        <img src="https://img.icons8.com/nolan/64/play.png" alt="play"/>
+                        <img src="https://img.icons8.com/nolan/64/plus.png" alt="plus"/>
+                    </div>
+                    <p class="carrousel-item__details--title">	Jurassic World: Dominion</p>
+                    <p class="carrousel-item__details--subtitle">2022 12+ 122m</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <h2 class="categories__title">Terror</h2>
 
     <section class="carrousel">
